# dotfiles

./: .ideavimrc  .localrc  .vimrc  Makefile  README.md  bringup.md  install.sh  setup.md  setup.sh
beads/.config/beads/: AGENTS.md
claude/: setup-claude-hooks.sh
claude-code/.claude/: CLAUDE.md
claude/.claude/hooks/: tmux_rename.sh
nvim/.config/EsriRuntimeQt/: ArcGIS Runtime SDK for Qt 100.11 Uninstall.xml  ArcGIS Runtime SDK for Qt 100.11.ini
nvim/.config/PlotJuggler/: PlotJuggler-3.ini
nvim/.config/QtProject/: QtCreator.db  QtCreator.ini
nvim/.config/QtProject/qtcreator/: cmaketools.xml  debuggers.xml  default.qws  devices.xml  profiles.xml  qtversion.xml  toolchains.xml
nvim/.config/QtProject/qtcreator/qbs/1.24.0/: qbs.conf
nvim/.config/QtProject/qtcreator/qnx/: qnxconfigurations.xml
nvim/.config/QtProject/qtcreator/templates/wizards/ArcGISRuntimeQmlCppTemplate100_11/: CMakeLists.txt  app.pro  arcgisruntime.pri  main.cpp  template.cpp  template.h  wizard.json
nvim/.config/QtProject/qtcreator/templates/wizards/ArcGISRuntimeQtTemplate100_11/: CMakeLists.txt  app.pro  arcgisruntime.pri  main.cpp  template.cpp  template.h  wizard.json
nvim/.config/QtProject/qtcreator/templates/wizards/ArcGISRuntimeQtTemplate100_11/cmake/: FindArcGISRuntime.cmake
nvim/.config/github-copilot/: versions.json
nvim/.config/instaloader/: session-stephenwel.ch
nvim/.config/iterm2/: AppSupport
nvim/.config/jgit/: config
nvim/.config/wireshark/: recent  recent_common
ollama/.config/ollama/: Modelfile.qwen-coder-bd
opencode/.config/opencode/: AGENTS.md  opencode.json
tmux/: .tmux.conf
vim/: .ideavimrc  .vimrc
(+16 files in other folders)
